# ALICE-Physics

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_JP.md  SECURITY.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  reexport_check.yml  release.yml
benches/: physics_bench.rs  stage_breakdown.rs  stage_breakdown_collider.rs
bindings/: AlicePhysics.cs  AlicePhysics.h
docs/: GPU_OFFLOAD_ROADMAP.md
docs/audits/: STUB_AUDIT_v0.11.0.md
examples/: basic_physics.rs  cloth_simulation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_collision.rs  fuzz_step.rs
include/: alice_physics.h
src/: analytics_bridge.rs  animation_blend.rs  anomaly.rs  articulation.rs  audio_physics.rs  box_collider.rs  bvh.rs  ccd.rs  character.rs  cloth.rs  cloth_fluid.rs  collider.rs  collision_mesh_gen.rs  compound.rs  cone.rs  contact_cache.rs  contact_viz.rs  convex_decompose.rs  convex_mesh_builder.rs  cylinder.rs  db_bridge.rs  debug_render.rs  deformable.rs  dynamic_bvh.rs  ellipsoid.rs  erosion.rs  error.rs  event.rs  ffi.rs  filter.rs  flow_viz.rs  fluid.rs  fluid_netcode.rs  force.rs  fracture.rs  gpu_bridge.rs  gpu_sdf.rs  heatmap.rs  heightfield.rs  interpolation.rs  (+51 more)
tests/: integration_physics.rs
unreal-plugin/: AlicePhysics.uplugin  README.md
unreal-plugin/Source/AlicePhysics/: AlicePhysics.Build.cs
unreal-plugin/Source/AlicePhysics/Private/: AlicePhysicsComponent.cpp  AlicePhysicsModule.cpp
unreal-plugin/Source/AlicePhysics/Public/: AlicePhysicsComponent.h  AlicePhysicsModule.h
web/: index.html  package.json  vite.config.ts
web/src/: main.ts
