[package]
name = "alice-physics"
version = "0.6.0"
edition = "2021"
authors = ["Moroya Sakamoto <ext-sakamoro@github.com>"]
description = "Deterministic 128-bit Fixed-Point Physics Engine"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-Physics"
keywords = ["physics", "deterministic", "fixed-point", "xpbd", "simulation"]
categories = ["game-development", "simulation", "science"]
rust-version = "1.70.0"
readme = "README.md"
publish = false

[lib]
name = "alice_physics"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
simd = []            # Enable SIMD (AVX2) optimizations for x86_64
parallel = ["rayon"] # Parallel constraint solving via graph coloring
neural = ["alice-ml"] # Deterministic neural controller (ALICE-ML × Physics)
python = ["pyo3", "numpy"] # Python bindings (PyO3 + NumPy zero-copy)
replay = ["alice-db"]      # Replay recording/playback via ALICE-DB
ffi = ["std"]              # C FFI for Unity/UE5/game engines
wasm = ["wasm-bindgen", "js-sys"] # WebAssembly bindings for browsers
analytics = ["dep:alice-analytics", "std"]  # ALICE-Analytics simulation profiling

[dependencies]
rayon = { version = "1.8", optional = true }
alice-ml = { path = "../ALICE-ML", optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
alice-db = { path = "../ALICE-DB", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
alice-analytics = { path = "../ALICE-Analytics", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", default-features = false }

[[example]]
name = "basic_physics"
required-features = ["std"]

[[example]]
name = "cloth_simulation"
required-features = ["std"]

[[bench]]
name = "physics_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1
